--- a/Template.theme.css
+++ b/Template.theme.css
@@ -3,34 +3,16 @@
  * @author Saltssaumure
  * @authorLink https://github.com/Saltssaumure
  * @description A something something Discord theme.
- * @version 1.0.0
+ * @license MIT
+ * @version 1.0
  * @invite uy8nKQVatp
- * @source https://github.com/Saltssaumure/template-discord-theme
+ * @source https://github.com/MiniDiscordThemes/Template
  * @donate https://ko-fi.com/saltssaumure
 */
 
-/*
-                                                Made by:
- _______  _______  _    _________ _______  _______  _______           __   __           _______  _______
-(  ____ \(  ___  )( \   \__   __/(  ____ \(  ____ \(  ___  )|\     /|(  \ /  )|\     /|(  ____ )(  ____ \
-| (____\/| (___) || |      | |   | (____\/| (____\/| (___) || |   | || || || || |   | || (____)|| (__  \/
-(_____  )|  ___  || |      | |   (_____  )(_____  )|  ___  || |   | || |(_)| || |   | || __  __)|  __)
-/\____) || )   ( || (____/\| |   /\____) |/\____) || )   ( || (___) || )   ( || (___) || ) \ \__| (____/\
-\_______)|/     \|(_______/)_(   \_______)\_______)|/     \|(_______)|/     \|(_______)|/   \__/(_______/
-                                         Licensed under GPL-3.0
-*/
+@import url("https://minidiscordthemes.github.io/Template/temp.min.css");
 
-@import url("https://saltssaumure.github.io/template-discord-theme/temp.min.css");
-
-/* See https://github.com/Saltssaumure/template-discord-theme/blob/main/README.md#customisation for customisation settings. */
+/* See https://github.com/MiniDiscordThemes/Template/blob/main/README.md#customisation for customisation settings. */
 :root {
-    /* Variables */
-}
-
-.theme-dark {
-    /* Variables */
-}
-
-.theme-light {
     /* Variables */
 }
