--- a/Template.theme.css
+++ b/Template.theme.css
@@ -12,7 +12,9 @@
 
 @import url("https://minidiscordthemes.github.io/Template/temp.min.css");
 
-/* See https://github.com/MiniDiscordThemes/Template/blob/main/README.md#customisation for customisation settings. */
+/* See https://github.com/MiniDiscordThemes/Template#customisation for customisation settings. */
 :root {
-    /* Variables */
+    --temp-bg-color: #000;
+    --temp-scanline: block;
+    --temp-flicker: none;
 }
