--- a/Template.theme.css
+++ b/Template.theme.css
@@ -2,7 +2,7 @@
  * @name Template
  * @author Saltssaumure
  * @authorLink https://github.com/Saltssaumure
- * @description A something something Discord theme.
+ * @description A template theme for multiple client mod support.
  * @license MIT
  * @version 1.0
  * @invite uy8nKQVatp
